validator_derive/tests/compile-fail/range/unknown_arg.stderr
error: Invalid attribute #[validate] on field `s`: unknown argument `mi` for validator `range` (it only has `min`, `max`)
 --> $DIR/unknown_arg.rs:5:22
  |
5 |     #[validate(range(mi = 2, max = 3))]
  |                      ^^
